[tool.poetry]
name = "my-leetcode"
version = "0.1.0"
description = ""
authors = ["Ruslan <khalitovr21@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
alembic = "^1.13.1"
uvicorn = {extras = ["standart"], version = "^0.30.1"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.31"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
