[tool.poetry]
name = "my-leetcode"
version = "0.1.0"
description = ""
authors = ["Ruslan <khalitovr21@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
alembic = "^1.13.1"
uvicorn = {extras = ["standart"], version = "^0.30.1"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.31"}
pydantic-settings = "^2.3.4"
bcrypt = "^4.1.3"
passlib = "^1.7.4"
asyncpg = "^0.29.0"
ruff = "^0.5.0"
pre-commit = "^3.7.1"
pyjwt = {extras = ["crypto"], version = "^2.8.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = [
    ".cache/*",
    ".venv",
    "__init__.py",
]

line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = [  # https://docs.astral.sh/ruff/rules/
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "Q",  # quotes
    "TID",  # tidy imports
    "ANN",  # annotations
    "DJ",  # django
    "B",  # bugbear
    "SIM",  # simplify
]
ignore = []
preview = true

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.isort]
split-on-trailing-comma = true
combine-as-imports = true
